# futmatrix-whop-agents

./: .env.example  .gitignore  .replit  CHANGELOG.md  DEPLOYMENT_GUARANTEES.md  FUTMATRIX_AI_AGENTS_DOCUMENTATION.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  SECURITY_FIXES.md  api_server.py  api_server_futmatrix.py  api_server_simple.py  create_agent_tables.py  demo_message_flow.py  docker-compose.yml  kong.yml  main.py  package.json  production_checklist.md  production_environment.env  pyproject.toml  replit.md  standalone_main.py  standalone_simple.py  start_services.sh  start_system.py  supabase_schema.sql  table_definitions_template.py  test_agents.py  test_deployment_guarantees.py  test_futmatrix_factory.py
agents/: agent_factory.py  business_rules.py  futmatrix_agents.py  futmatrix_simple.py  personalities.py
api/: rest_api.py
config/: settings.py
core/: agent.py  database.py  database_schema.py  database_simple.py  mcp_client.py  message_broker.py  mock_message_broker.py  monitoring.py  openai_integration.py  rag_system.py  security.py  session_manager.py  supabase_tools.py  vector_database.py  websocket_server.py  workflow.py
data/conversations/: agent_beta_test_user.json  (+7 more)
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  INDEX.md  SYSTEM_ARCHITECTURE.md  USAGE_EXAMPLES.md
init-db/: 01-init.sql
middleware/: security.py
models/: schemas.py
tests/: conftest.py  test_agent_core.py  test_agent_factory.py  test_business_rules.py  test_database.py  test_integration.py  test_personalities.py  test_workflow.py
utils/: exceptions.py  logger.py  monitoring.py
