[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.28",
    "langchain>=0.3.27",
    "langgraph>=0.6.3",
    "openai>=1.98.0",
    "pgvector>=0.4.1",
    "pika>=1.3.2",
    "postgrest>=1.1.1",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "redis>=6.2.0",
    "supabase>=2.17.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
]
